# wrf-rust-next

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
crates/wrf-core/: Cargo.toml
crates/wrf-core/src/: compute.rs  extract.rs  file.rs  grid.rs  hdf5_reader.rs  lib.rs  units.rs  variables.rs
crates/wrf-core/src/diag/: cape.rs  cloud.rs  extra.rs  helicity.rs  mod.rs  moisture.rs  pressure.rs  radar.rs  severe.rs  srh.rs  thermo.rs  vorticity.rs  wind.rs
crates/wrf-core/src/met/: composite.rs  dynamics.rs  mod.rs  thermo.rs  wind.rs
docs/: .nojekyll  app.js  index.html  styles.css
docs/lib/: app-main.mjs  case-config.mjs  namelist-render.mjs  preflight-core.mjs  presets.mjs  sizing.mjs  source-profiles.mjs  validate-case.mjs
docs/starter-files/: README.md  Vtable.ECMWF_opendata  namelist.input.ecmwf-starter  namelist.wps.ecmwf-starter
docs/tests/: site.test.mjs  wizard-core.test.mjs
python/wrf/: __init__.py  cli.py  gui.py  plot.py  tui.py
skills/wrf-community-onboarding/: SKILL.md
skills/wrf-community-onboarding/agents/: openai.yaml
skills/wrf-community-onboarding/references/: build-and-run.md  gpu-experimental.md  init-data.md  specs-and-paths.md  troubleshooting.md  windows-wsl.md
src/: py_file.rs  py_getvar.rs
