[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wrf-rust"
version = "0.2.7"
description = "Rust-powered WRF post-processing — fixes CAPE, SRH, adds 65+ variables, 5-30x faster than wrf-python"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Fahrenheit Research"}]
keywords = ["wrf", "meteorology", "weather", "atmospheric-science", "nwp", "cape", "srh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["numpy>=1.20"]
readme = "README.md"

[tool.maturin]
python-source = "python"
module-name = "wrf._wrf"
features = ["pyo3/extension-module"]
# For local dev with system netcdf: maturin develop --release
# For PyPI wheels (no system deps): maturin build --release --cargo-extra-args="--no-default-features --features pure-rust-reader"
