[package]
name = "wrf-core"
version = "0.1.0"
edition.workspace = true
description = "Pure Rust WRF post-processing library"

[features]
default = ["pure-rust-reader"]
netcdf-backend = ["dep:netcdf"]
pure-rust-reader = ["dep:flate2"]

[dependencies]
netcdf = { version = "0.12", optional = true }
ndarray = "0.16"
flate2 = { version = "1", default-features = false, features = ["rust_backend"], optional = true }
rayon = "1.10"
